--- a/tarea1.tex
+++ b/tarea1.tex
@@ -21,25 +21,89 @@
 	\begin{enumerate}
    	% Ejercicio 1
    	\item {
-   Dibujar la región W definida por las superficies $x + 2y + 3z = 6$ y $z = 0$. Expresar la integral triple $\iiint_Wf(x,y,z)dV$ de las seis formas posibles como integrales iteradas.\\
+   Dibujar la región $W$ definida por las superficies $x + 2y + 3z = 6$,
+	 $x = 0$, $y = 0$ y $z = 0$.
+	 Expresar la integral triple $\iiint_Wf(x,y,z)dV$ de las seis formas posibles
+	 como integrales iteradas.
+
+	 \begin{align*}
+		 &\int_{0}^{2} \int_{0}^{3-\frac{3}{2}z} \int_{0}^{6-2y-3z} dxdydz\\
+		 &\int_{0}^{3} \int_{0}^{2-\frac{2}{3}y} \int_{0}^{6-2y-3z} dxdzdy\\
+		 &\int_{0}^{2} \int_{0}^{6-3z} \int_{0}^{3-\frac{x+3z}{2}} dydxdz\\
+		 &\int_{0}^{6} \int_{0}^{2-\frac{x}{3}} \int_{0}^{3-\frac{x+3z}{2}} dydzdx\\
+		 &\int_{0}^{6} \int_{0}^{3-\frac{x}{2}} \int_{0}^{2-\frac{x+2y}{3}} dzdydx\\
+		 &\int_{0}^{3} \int_{0}^{6-2y} \int_{0}^{2-\frac{x+2y}{3}} dzdxdy
+	 \end{align*}
 
 	}
 
 	% Ejercicio 2
    \item {
     Dibujar la región W descrita por la integral iterada
-    \begin{center}
-    $\int_{0}^{1}\int_{z^3}^{\sqrt{z}}\int_{0}^{4-x}dydxdz$. 
-    \end{center}
-    Calcular su volumen.\\
-		     
+    \begin{equation*}
+    	\int_{0}^{1} \int_{z^3}^{\sqrt{z}} \int_{0}^{4-x} dydxdz
+		\end{equation*}
+
+    Calcular su volumen.
+		\begin{align*}
+			\int_{0}^{1} \int_{z^3}^{\sqrt{z}} \int_{0}^{4-x} dydxdz
+			&= \int_{0}^{1} \int_{z^3}^{\sqrt{z}} y \Big|_{0}^{4-x} dxdz
+			 = \int_{0}^{1} \int_{z^3}^{\sqrt{z}} ((4-x)-0) dxdz
+			 = \int_{0}^{1} \int_{z^3}^{\sqrt{z}} (4-x) dxdz\\
+			&= \int_{0}^{1} (4x - \frac{1}{2}x^2) \Big |_{z^3}^{\sqrt{z}} dz
+			 = \int_{0}^{1} (4(z^{\frac{1}{2}}) - \frac{1}{2}(z^{\frac{1}{2}})^2) - (4(z^3)
+			 - \frac{1}{2}(z^3)^2) dz\\
+			&= \int_{0}^{1} (4z^{\frac{1}{2}} - \frac{1}{2}z - 4z^3 + \frac{1}{2}z^6) dz
+			 = (\frac{8}{3}z^{\frac{3}{2}} - \frac{1}{4}z^2 - z^4 + \frac{1}{14}z^7) \Big |_{0}^{1}\\
+			&= (\frac{8}{3}(1)^{\frac{3}{2}} - \frac{1}{4}(1)^2 - (1)^4 + \frac{1}{14}(1)^7)
+			- (\frac{8}{3}(0)^{\frac{3}{2}} - \frac{1}{4}(0)^2 - (0)^4 + \frac{1}{14}(0)^7)\\
+			&= \frac{8}{3} - \frac{1}{4} - 1 + \frac{1}{14} = \frac{32-3}{12} - 1 + \frac{1}{14}
+			 = \frac{203+6}{84} - 1 = \frac{209 - 84}{84} = \frac{125}{84}
+		\end{align*}
+
 	}
 
 
 	% Ejercicio 3
    \item {
-    Integrar la función $f(x,y) = x^2 + 2xy^2 + 2$ sobre la región $D$ acotada por la gráfica de $y = -x^2 + x$, el eje $x$, y las rectas $x = 0$ y $x = 2$.\\
+    Integrar la función $f(x,y) = x^2 + 2xy^2 + 2$ sobre la región $D$
+		acotada por la gráfica de $y = -x^2 + x$, el eje $x$, y las rectas
+		$x = 0$ y $x = 2$.
 
+		\begin{equation*}
+			-x^2 + x = 0 \implies x = x^2 \implies x = 1, 0
+		\end{equation*}
+		\begin{align*}
+			&-(0.5)^2 + 0.5 = -0.25 + 0.5 = 0.25 > 0 \\
+			&-(1.5)^2 + 1.5 = -2.25 + 1.5 = -0.75 < 0\\
+		\end{align*}
+		Entones la función es positiva en $(0, 1)$ y negativa en $(1, 2]$.
+
+		Por lo tanto hay que considerar dos integrales para calcular el volumen deseado.
+
+		\begin{align*}
+			&  \int_{0}^{1} \int_{0}^{-x^2+x} (x^2 + 2xy^2 + 2) dy dx + \int_{1}^{2} \int_{-x^2+x}^{0} (x^2 + 2xy^2 + 2) dy dx\\
+			&= \int_{0}^{1} (x^2y + \frac{2}{3}xy^3 + 2y) \Big |_{0}^{-x^2+x}dx + \int_{1}^{2} (x^2y + \frac{2}{3}xy^3 + 2y) \Big |_{-x^2+x}^{0}dx\\
+			&= \int_{0}^{1} (x^2(-x^2+x) + \frac{2}{3}x(-x^2+x)^3 + 2(-x^2+x)) - (x^2(0) + \frac{2}{3}x(0)^3 + 2(0))dx\\
+			&+ \int_{1}^{2} (x^2(0) + \frac{2}{3}x(0)^3 + 2(0)) -  (x^2(-x^2+x) + \frac{2}{3}x(-x^2+x)^3 + 2(-x^2+x))dx\\
+			&= \int_{0}^{1} (x^2(-x^2+x) + \frac{2}{3}x(-x^2+x)^3 + 2(-x^2+x))dx + \int_{1}^{2}-(x^2(-x^2+x) + \frac{2}{3}x(-x^2+x)^3 + 2(-x^2+x))dx\\
+			&= \int_{0}^{1} (-x^4+x^3 + \frac{2}{3}(-x^7 + x^6 - x^5 + x^4) - 2x^2 + 2x)dx - \int_{1}^{2} (-x^4+x^3 + \frac{2}{3}(-x^7 + x^6 - x^5 + x^4) - 2x^2 + 2x)dx\\
+			&= \int_{0}^{1} (-\frac{1}{3}x^4+x^3 + \frac{2}{3}(-x^7 + x^6 - x^5) - 2x^2 + 2x)dx - \int_{1}^{2} (-\frac{1}{3}x^4+x^3 + \frac{2}{3}(-x^7 + x^6 - x^5) - 2x^2 + 2x)dx\\
+			&= (-\frac{1}{15}x^5 + \frac{1}{4}x^4 + \frac{2}{3}(-\frac{1}{8}x^8 + \frac{1}{7}x^7 - \frac{1}{6}x^6) - \frac{2}{3}x^3 + x^2) \Big |_{0}^{1}
+			- (-\frac{1}{15}x^5 + \frac{1}{4}x^4 + \frac{2}{3}(-\frac{1}{8}x^8 + \frac{1}{7}x^7 - \frac{1}{6}x^6) - \frac{2}{3}x^3 + x^2) \Big |_{1}^{2}\\
+			&=(-\frac{1}{15} + \frac{1}{4} + \frac{2}{3}(-\frac{1}{8} + \frac{1}{7} - \frac{1}{6} - 1) + 1)
+			-  ((-\frac{1}{15}(2)^5 + \frac{1}{4}(2)^4 + \frac{2}{3}(-\frac{1}{8}(2)^8 + \frac{1}{7}(2)^7 - \frac{1}{6}(2)^6 - 2^3) + (2)^2)\\
+			&- (-\frac{1}{15} + \frac{1}{4} + \frac{2}{3}(-\frac{1}{8} + \frac{1}{7} - \frac{1}{6} - 1) + 1))\\
+			&= (\frac{15 - 4}{60} + \frac{2}{3}(\frac{-42+48-56-336}{336}) + 1)
+			-((-\frac{32}{15} + \frac{16}{4} + \frac{2}{3}(-\frac{256}{8} + \frac{128}{7} - \frac{64}{6} - 8) + 4) \\
+			&-(\frac{15 - 4}{60} + \frac{2}{3}(\frac{-42+48-56-336}{336}) + 1))\\
+			&= 2(\frac{11}{60} + \frac{2}{3} \cdot \frac{-382}{336} + 1) - (-\frac{32}{15} + 4 + \frac{2}{3}(-32 + \frac{128}{7} - \frac{32}{3} - 8) + 4)\\
+			&= 2(\frac{11}{60} - \frac{382}{504} + 1) - (-\frac{32}{15} + 8 + \frac{2}{3}(-40 + \frac{384-224}{21}))\\
+			&= 2(\frac{462 - 1910}{2520} + 1) - (-\frac{32}{15} + 8 + \frac{2}{3} \cdot \frac{160-840}{21})\\
+			&= 2(\frac{-1448 + 2520}{2520}) - (-\frac{32}{15} + 8 + \frac{2}{3} \cdot \frac{-680}{21}) = 2 \cdot \frac{1072}{2520} - (-\frac{32}{15} + 8 - \frac{1360}{63})\\
+			&= \frac{1072}{1260} - (\frac{-672-6800}{315} + 8) = \frac{1072}{1260} - (\frac{-7472+2520}{315})\\
+			&= \frac{1072}{1260} - (-\frac{4952}{315}) = \frac{1072}{1260} + \frac{4952}{315} = \frac{1072+19808}{1260} = \frac{20880}{1260} \approx 16.6
+		\end{align*}
 
 	}
 
@@ -53,7 +117,7 @@
    \item {
    Mostrar que al evaluar $\iint_DdA$, donde $D$ es una región $y$-simple, se reproduce la fórmula del cálculo de una variable para el área entre dos curvas.\\
 
-	
+
 
     }
 
@@ -61,28 +125,28 @@
    \item {
    Describir la región que se encuentra entre el cono $z = \sqrt{x^2 + y^2}$ como una región elemental.\\
 
-	
+
     }
-    
+
     % Ejercicio 7
    \item {
    Hallar el volumen acotado por el paraboloide $z = 2x^2 + y^2$ y el cilindro $z = 4 - y^2$\\
 
-	
+
     }
-    
+
     % Ejercicio 8
    \item {
     \begin{enumerate}
 	\item
-	Investigar qué es el centro de masa de un cuerpo y cómo se puede calcular usando integrales múltiples.\\	
-	
-	
-	\item    
-	La densidad en un punto $P$ de un cubo sólido de lado $a$ es directamente proporcional al cuadrado de la distancia del punto $P$ a una esquina fija del cubo. Encontrar el centro de masa.\\    
-    
+	Investigar qué es el centro de masa de un cuerpo y cómo se puede calcular usando integrales múltiples.\\
+
+
+	\item
+	La densidad en un punto $P$ de un cubo sólido de lado $a$ es directamente proporcional al cuadrado de la distancia del punto $P$ a una esquina fija del cubo. Encontrar el centro de masa.\\
+
     \end{enumerate}
     }
-    
+
 \end{enumerate}
 \end{document}
